feat: update migration
